fixed spelling issues

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 <td><img src="img/puppy__12.jpg" alt=""></td>
                                 <td>45-70lb</td>
                                 <td>China</td>
-                                <td>Think and course coat; red, brown and black</td>
+                                <td>Thick and course coat; red, brown and black</td>
                             </tr>
                             <tr>
                                 <td>Doberman Pinscher</td>
@@ -100,7 +100,7 @@
                             </select>
                         </div>
                         <div>
-                            <label for="bio">Why do you Love Puppies?</label>
+                            <label for="bio">Why do you love puppies?</label>
                             <br>
                             <textarea name="bio" id="bio" cols="50" rows="10">Puppies are the best because...</textarea>
                         </div>
